--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "graphql": "^16.8.2",
     "lucide-react": "^0.378.0",
     "next": "15.3.0",
-    "next-auth": "5.0.0-beta.28",
+    "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "payload": "3.33.0",
     "prism-react-renderer": "^2.3.1",
